--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -3,30 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title th:text="${subject}"> </title>
+    <title th:text="${subject}"></title>
 </head>
 <style>
 </style>
 <body>
 <h1 th:text="${subject}"></h1>
-<table>
+<table th:each="block, index: *{blocks}">
     <thead>
+    <tr class="text-start text-primary">
+        <th colspan="3" th:text="${block.name}">
+            <span class="fw-lighter">{modificationType}: </span>
+
+        </th>
+        <th th:text="${block.startDate()}">
+            <span class="fw-lighter">Data rozpoczęcia: </span>
+        </th>
+        <th th:text="${block.endDate()}">
+            <span class="fw-lighter">Data zakończenia: </span>
+        </th>
+    </tr>
     <tr>
-        <td>Blok</td>
-        <td>Rodzaj zmiany</td>
-        <td>Parametr</td>
-        <td>Nowa wartość</td>
-        <td>Poprzednia wartość</td>
+        <th>Rodzaj zmiany</th>
+        <th>Nazwa</th>
+        <th>Nowa wartosć</th>
+        <th>Poprzednia wartość</th>
     </tr>
     </thead>
-    <tbody>
-    <tr th:each="modification, index: *{modifications}">
-        <td th:text="${modification.blockName()}"></td>
-        <td th:text="${modification.type()}"></td>
-        <td th:text="${modification.parameterName()}"></td>
-        <td th:text="${modification.newValue()}"></td>
-        <td th:text="${modification.oldValue()}"></td>
-    </tr>
+    <tbody class="border-light">
+        <tr th:each="modification, modIndex: *{block.modifications()}">
+            <td>{modificationType}</td>
+            <td th:text="${modification.blockName()}"></td>
+            <td th:text="${modification.newValue()}"></td>
+            <td th:text="${modification.oldValue()}"></td>
+        </tr>
     </tbody>
 </table>
 </body>
